# scrini-email-wakeup-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py
app/agent/: anthropic_runner.py  negotiation.py  openai_runner.py  orchestrator.py  outreach.py  perception.py  planner.py  prompts.py  rate_extract.py  schemas.py
app/api/: __init__.py  deps.py  router.py  schemas.py
app/calendar/: __init__.py  stub.py
app/domain/: enums.py  thread_state.py
app/email/: inbound_parse.py  send.py  webhook_adapters.py
app/storage/: database.py  models.py  repository.py
docs/transcripts/: 01-successful_negotiation_and_booking.md  02-cancellation_and_rebooking_loop.md  03-graceful_walk_away_budget.md
scripts/: demo_curl.sh  psql-wakeup.sh
tests/: test_closed_reopen.py  test_negotiation.py  test_rate_extract.py  test_sandbox_allowlist.py  test_state_machine.py
