[project]
name = "scrini-email-wakeup-agent"
version = "0.1.0"
description = "Autonomous email agent for prospect outreach, negotiation, and call booking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.32.0,<1",
  "sqlalchemy>=2.0.36,<3",
  "psycopg[binary]>=3.2.3,<4",
  "pydantic>=2.10.0,<3",
  "pydantic-settings>=2.6.0,<3",
  "httpx>=0.28.0,<1",
  "email-validator>=2.2.0,<3",
  "anthropic>=0.49.0,<1",
  "python-multipart>=0.0.12,<1",
  "resend>=2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
